# RAG-for-Synthesizable-Verilog-Generation

./: coderag.ipynb  main.py  pyproject.toml  requirements.txt
database/: prompt_dff.txt
knowledge_base/: dff.txt
